objects/SpaceAuditHistory__c.object
<CustomObject>
    <description>&lt;SPH&gt; -  Represents data changes for audit purposes ie. Capture changes to area for a space</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChangedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Space_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateEffective__c</fullName>
        <label>Date Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewArea__c</fullName>
        <label>New Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Space__c</fullName>
        <label>Space</label>
        <referenceTo>Space__c</referenceTo>
        <relationshipLabel>Space Audit Histories</relationshipLabel>
        <relationshipName>SpaceAuditHistories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Space Audit History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Space__c</columns>
        <columns>Area__c</columns>
        <columns>NewArea__c</columns>
        <columns>DateEffective__c</columns>
        <columns>ChangedBy__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPH - {0000}</displayFormat>
        <label>Space History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Space Audit Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SAH_ValidateDate</fullName>
        <active>false</active>
        <errorConditionFormula>IF(YEAR(DateEffective__c) &gt; 3000, true, false)</errorConditionFormula>
        <errorMessage>Year value should not exceed to 3000</errorMessage>
    </validationRules>
</CustomObject>